--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
 				<!-- Footer -->
 					<footer id="footer">
-						<span class="copyright">&copy; Wunerrah<a href="#">Wunerrah</a>.</span>
+						<span class="copyright">&copy; Wunerrah<a href="https://github.com/wunerrah">Wunerrah</a>.</span>
 					</footer>
 
 			</div>
