--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <!--
 	Aerial by Wunerrah
-	html5up.net | @wunerrah
+	html5 | @wunerrah
 -->
 <html>
 	<head>
@@ -21,7 +21,7 @@
 
 				<!-- Header -->
 					<header id="header">
-						<h1>Adam Jensen</h1>
+						<h1>Wunerrah Dev</h1>
 						<p>Security Chief &nbsp;&bull;&nbsp; Cyborg &nbsp;&bull;&nbsp; Never asked for this</p>
 						<nav>
 							<ul>
