--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 				<!-- Header -->
 					<header id="header">
 						<h1>Wunerrah Dev</h1>
-						<p>Security Chief &nbsp;&bull;&nbsp; Cyborg &nbsp;&bull;&nbsp; Never asked for this</p>
+						<p>New Dev &nbsp;&bull;&nbsp; Cyborg &nbsp;&bull;&nbsp; Never asked for this</p>
 						<nav>
 							<ul>
 								<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
@@ -36,7 +36,7 @@
 
 				<!-- Footer -->
 					<footer id="footer">
-						<span class="copyright">&copy; Wunerrah<a href="https://github.com/wunerrah">Wunerrah</a>.</span>
+						<span class="copyright">&copy; WunerrahDev<a href="https://github.com/wunerrah">Wunerrah</a>.</span>
 					</footer>
 
 			</div>
